fleshing out screen 4

--- a/src/screen_four/index.html
+++ b/src/screen_four/index.html
@@ -53,89 +53,154 @@
               <div class="panel-group panel-primary">
               <div class="panel-heading">Antenatal Required Tests</div>
               <div class="panel-body">
+
                 <div class="well">If not available please provide reason.</div>
-                <h3>Ultrasound Tests</h3>
-                <div class="form-group">
-                  <label for="dating-scan">Dating scan</label>
-                  <input type="file" class="form-control" id="dating-scan" name="dating-scan">
-                  <label for="dating-scan-reason">Reason</label>
-                  <input class="form-control" id="dating-scan-reason" name="dating-scan-reason">
-                </div>
-                <div class="form-group">
-                  <label for="first-trimester-screening">First trimester screening (11-14 weeks)</label>
-                  <input type="file" class="form-control" id="first-trimester-screening" name="first-trimester-screening">
-                  <label for="first-trimester-screening-reason">Reason</label>
-                  <input class="form-control" id="first-trimester-screening-reason" name="first-trimester-screening-reason">
-                </div>
-                <div class="form-group">
-                  <label for="anatomy-scan">Anatomy scan (18-22 weeks)</label>
-                  <input type="file" class="form-control" id="anatomy-scan" name="anatomy-scan">
-                  <label for="anatomy-scan-reason">Reason</label>
-                  <input class="form-control" id="anatomy-scan-reason" name="anatomy-scan-reason">
+
+                <div class="panel panel-default">
+                  <div class="panel-heading">Ultrasound Tests</div>
+                  <div class="panel-body">
+                    <div class="form-group row">
+                      <div class="col-xs-4">
+                        <label for="dating-scan">Dating scan</label>
+                        <input type="file" id="dating-scan" class="form-control" name="dating-scan">
+                      </div>
+                      <div class="col-xs-8">
+                        <label for="dating-scan-reason"><small>Reason</small></label>
+                        <input id="dating-scan-reason" class="form-control" name="dating-scan-reason">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <div class="col-xs-4">
+                        <label for="first-trimester-screening">First trimester screening (11-14 weeks)</label>
+                        <input type="file" id="first-trimester-screening" class="form-control" name="first-trimester-screening">
+                      </div>
+                      <div class="col-xs-8">
+                        <label for="first-trimester-screening-reason"><small>Reason</small></label>
+                        <input id="first-trimester-screening-reason" class="form-control" name="first-trimester-screening-reason">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <div class="col-xs-4">
+                        <label for="anatomy-scan">Anatomy scan (18-22 weeks)</label>
+                        <input type="file" id="anatomy-scan" class="form-control" name="anatomy-scan">
+                      </div>
+                      <div class="col-xs-8">
+                        <label for="anatomy-scan-reason"><small>Reason</small></label>
+                        <input id="anatomy-scan-reason" class="form-control" name="anatomy-scan-reason">
+                      </div>
+                    </div>
+                  </div>
                 </div>
 
-                <h3>Pathology Tests</h3>
+                <br/>
 
-                <div class="form-group">
-                  <label for="dating-scan">Dating scan</label>
-                  <input type="file" class="form-control" id="dating-scan" name="dating-scan">
-                  <label for="dating-scan-reason">Reason</label>
-                  <input class="form-control" id="dating-scan-reason" name="dating-scan-reason">
+                <div class="panel panel-default">
+                  <div class="panel-heading">Pathology Tests</div>
+                  <div class="panel-body">
+                    <div class="form-group row">
+                      <div class="col-xs-4">
+                        <label for="full-blood-count">Full blood count</label>
+                        <input type="file" id="full-blood-count" class="form-control" name="full-blood-count">
+                      </div>
+                      <div class="col-xs-8">
+                        <label for="full-blood-count-reason"><small>Reason</small></label>
+                        <input id="full-blood-count-reason" class="form-control" name="full-blood-count-reason">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <div class="col-xs-4">
+                        <label for="blood-group-antibodies">Blood group antibodies</label>
+                        <input type="file" id="blood-group-antibodies" class="form-control" name="blood-group-antibodies">
+                      </div>
+                      <div class="col-xs-8">
+                        <label for="blood-group-antibodies-reason"><small>Reason</small></label>
+                        <input id="blood-group-antibodies-reason" class="form-control" name="blood-group-antibodies-reason">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <div class="col-xs-4">
+                        <label for="chlamydia">Chlamydia</label>
+                        <input type="file" id="chlamydia" class="form-control" name="chlamydia">
+                      </div>
+                      <div class="col-xs-8">
+                        <label for="chlamydia-reason"><small>Reason</small></label>
+                        <input id="chlamydia-reason" class="form-control" name="chlamydia-reason">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <div class="col-xs-4">
+                        <label for="hepatitis-b-c">Hepatitis B and C</label>
+                        <input type="file" id="hepatitis-b-c" class="form-control" name="hepatitis-b-c">
+                      </div>
+                      <div class="col-xs-8">
+                        <label for="hepatitis-b-c-reason"><small>Reason</small></label>
+                        <input id="hepatitis-b-c-reason" class="form-control" name="hepatitis-b-c-reason">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <div class="col-xs-4">
+                        <label for="hiv">HIV</label>
+                        <input type="file" id="hiv" class="form-control" name="hiv">
+                      </div>
+                      <div class="col-xs-8">
+                        <label for="hiv-reason"><small>Reason</small></label>
+                        <input id="hiv-reason" class="form-control" name="hiv-reason">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <div class="col-xs-4">
+                        <label for="syphilis">Syphilis</label>
+                        <input type="file" id="syphilis" class="form-control" name="syphilis">
+                      </div>
+                      <div class="col-xs-8">
+                        <label for="syphilis-reason"><small>Reason</small></label>
+                        <input id="syphilis-reason" class="form-control" name="syphilis-reason">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <div class="col-xs-4">
+                        <label for="rubella-titre">Rubella Titre</label>
+                        <input type="file" id="rubella-titre" class="form-control" name="rubella-titre">
+                      </div>
+                      <div class="col-xs-8">
+                        <label for="rubella-titre-reason"><small>Reason</small></label>
+                        <input id="rubella-titre-reason" class="form-control" name="rubella-titre-reason">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <div class="col-xs-4">
+                        <label for="varicella">Varicella</label>
+                        <input type="file" id="varicella" class="form-control" name="varicella">
+                      </div>
+                      <div class="col-xs-8">
+                        <label for="varicella-reason"><small>Reason</small></label>
+                        <input id="varicella-reason" class="form-control" name="varicella-reason">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <div class="col-xs-4">
+                        <label for="vitamin-d-level">Vitamin D Levels</label>
+                        <input type="file" id="vitamin-d-level" class="form-control" name="vitamin-d-level">
+                      </div>
+                      <div class="col-xs-8">
+                        <label for="vitamin-d-level-reason"><small>Reason</small></label>
+                        <input id="vitamin-d-level-reason" class="form-control" name="vitamin-d-level-reason">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                      <div class="col-xs-4">
+                        <label for="midstream-urine">Midstream Urine</label>
+                        <input type="file" id="midstream-urine" class="form-control" name="midstream-urine">
+                      </div>
+                      <div class="col-xs-8">
+                        <label for="midstream-urine-reason"><small>Reason</small></label>
+                        <input id="midstream-urine-reason" class="form-control" name="midstream-urine-reason">
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="form-group">
-                  <label for="dating-scan">Dating scan</label>
-                  <input type="file" class="form-control" id="dating-scan" name="dating-scan">
-                  <label for="dating-scan-reason">Reason</label>
-                  <input class="form-control" id="dating-scan-reason" name="dating-scan-reason">
-                </div>
-                <div class="form-group">
-                  <label for="dating-scan">Dating scan</label>
-                  <input type="file" class="form-control" id="dating-scan" name="dating-scan">
-                  <label for="dating-scan-reason">Reason</label>
-                  <input class="form-control" id="dating-scan-reason" name="dating-scan-reason">
-                </div>
-                <div class="form-group">
-                  <label for="dating-scan">Dating scan</label>
-                  <input type="file" class="form-control" id="dating-scan" name="dating-scan">
-                  <label for="dating-scan-reason">Reason</label>
-                  <input class="form-control" id="dating-scan-reason" name="dating-scan-reason">
-                </div>
-                <div class="form-group">
-                  <label for="dating-scan">Dating scan</label>
-                  <input type="file" class="form-control" id="dating-scan" name="dating-scan">
-                  <label for="dating-scan-reason">Reason</label>
-                  <input class="form-control" id="dating-scan-reason" name="dating-scan-reason">
-                </div>
-                <div class="form-group">
-                  <label for="dating-scan">Dating scan</label>
-                  <input type="file" class="form-control" id="dating-scan" name="dating-scan">
-                  <label for="dating-scan-reason">Reason</label>
-                  <input class="form-control" id="dating-scan-reason" name="dating-scan-reason">
-                </div>
-                <div class="form-group">
-                  <label for="dating-scan">Dating scan</label>
-                  <input type="file" class="form-control" id="dating-scan" name="dating-scan">
-                  <label for="dating-scan-reason">Reason</label>
-                  <input class="form-control" id="dating-scan-reason" name="dating-scan-reason">
-                </div>
-                <div class="form-group">
-                  <label for="dating-scan">Dating scan</label>
-                  <input type="file" class="form-control" id="dating-scan" name="dating-scan">
-                  <label for="dating-scan-reason">Reason</label>
-                  <input class="form-control" id="dating-scan-reason" name="dating-scan-reason">
-                </div>
-                <div class="form-group">
-                  <label for="dating-scan">Dating scan</label>
-                  <input type="file" class="form-control" id="dating-scan" name="dating-scan">
-                  <label for="dating-scan-reason">Reason</label>
-                  <input class="form-control" id="dating-scan-reason" name="dating-scan-reason">
-                </div>
-                <div class="form-group">
-                  <label for="dating-scan">Dating scan</label>
-                  <input type="file" class="form-control" id="dating-scan" name="dating-scan">
-                  <label for="dating-scan-reason">Reason</label>
-                  <input class="form-control" id="dating-scan-reason" name="dating-scan-reason">
-                </div>
+                
+                <br/>
 
                 <button type="submit" class="btn btn-default">Back</button>
                 <button type="submit" class="btn btn-primary pull-right">Next</button>
