--- a/src/screen_four/index.html
+++ b/src/screen_four/index.html
@@ -32,7 +32,7 @@
                               </span>
                   </a>
                 </li>
-                <li role="presentation" class="active">
+                <li role="presentation" class="disabled">
                   <a href="#step3" data-toggle="tab" aria-controls="step3" role="tab" title="Step 3">
                     <span class="round-tab">
                                   <i class="glyphicon glyphicon-picture"></i>
@@ -40,7 +40,7 @@
                   </a>
                 </li>
 
-                <li role="presentation" class="disabled">
+                <li role="presentation" class="active">
                   <a href="#complete" data-toggle="tab" aria-controls="complete" role="tab" title="Complete">
                     <span class="round-tab">
                                   <i class="glyphicon glyphicon-ok"></i>
@@ -199,11 +199,11 @@
                     </div>
                   </div>
                 </div>
-                
+
                 <br/>
 
                 <button type="submit" class="btn btn-default">Back</button>
-                <button type="submit" class="btn btn-primary pull-right">Next</button>
+                <button type="submit" class="btn btn-primary pull-right">Complete</button>
               </div>
             </form>
           </div>
