cleaning screen 4 code

--- a/src/screen_four/index.html
+++ b/src/screen_four/index.html
@@ -49,7 +49,7 @@
                 </li>
               </ul>
             </div>
-            <form id="screen-two" action="" method="post" role="form">
+            <form id="screen-four" action="" method="post" role="form">
               <div class="panel-group panel-primary">
               <div class="panel-heading">Antenatal Required Tests</div>
               <div class="panel-body">
@@ -246,7 +246,7 @@ $(function(){
   };
 
   function save(){
-    var fileName = "screen_two"; //TODO folder 
+    var fileName = "screen_four"; //TODO folder 
     var fieldObject = $('form').serializeObject();
 
     $('input:file').each(function() {
