Added screen three code and made buttons consistent

--- a/src/screen_one/index.html
+++ b/src/screen_one/index.html
@@ -79,7 +79,7 @@
 								<h3>Patient Bio Data</h3>
 								<p>Patient Bio Data</p>
 								<ul class="list-inline pull-right">
-									<li><input type="submit" class="btn btn-primary next-step" value="Save and continue" /></li>
+									<li></li>
 								</ul>
 								<div class="clearfix"></div>
 								<div class=row>
@@ -521,6 +521,7 @@
 						</div>
 				</div>
 		</div>
+		<input type="submit" class="pull-right btn btn-primary next-step" value="Next" />
 		</form>
 	</div>
 	</section>
