fixing json mappings

--- a/src/screen_one/index.html
+++ b/src/screen_one/index.html
@@ -84,8 +84,8 @@
 								<div class="clearfix"></div>
 								<div class=row>
 									<div class="form-group col-sm-6">
-										<label class="text-right col-sm-4" for="Surname">Surname<span>*</span></label>
-										<input class="col-sm-6 form-control" name="Surname"  required type="text" id="Surname" placeholder="Jane">
+										<label class="text-right col-sm-4" for="surname">Surname<span>*</span></label>
+										<input class="col-sm-6 form-control" name="surname"  required type="text" id="surname" placeholder="Jane">
 									</div>
 									<div class="form-group col-sm-4">
 										<label class="col-sm-5 text-right" for="first_name">Fist name<span>*</span></label>
@@ -94,8 +94,8 @@
 								</div>
 								<div class="row">
 									<div class="form-group col-sm-6">
-										<label class="text-right col-sm-4" for="CountryOfBirth">Country Of Birth<span>*</span></label>
-										<select class="col-sm-5 form-control" name="CountryOfBirth" required>
+										<label class="text-right col-sm-4" for="country_of_birth">Country Of Birth<span>*</span></label>
+										<select class="col-sm-5 form-control" name="country_of_birth" required>
   <option selected value="" disabled>Choose here</option>
 	<option value="4">Afghanistan</option>
 	<option value="248">Åland Islands</option>
@@ -350,20 +350,20 @@
 									</div>
 
 									<div class="form-group col-sm-4">
-										<label class="text-right col-sm-5" for="Dateofbirth">Date of birth<span>*</span></label>
-										<input name="Dateofbirth" required type="date" class="col-sm-4 form-control" id="Dateofbirth" placeholder="dd/mm/yyyy">
+										<label class="text-right col-sm-5" for="dob">Date of birth<span>*</span></label>
+										<input name="dob" required type="date" class="col-sm-4 form-control" id="dob" placeholder="dd/mm/yyyy">
 									</div>
 								</div>
 
 
 								<div class=row>
 									<div class="form-group col-sm-6">
-										<label class="col-sm-4 text-right" for="Address">Address<span>*</span></label>
-										<input class="col-sm-4 form-control" name="Address" required type="text" id="Address" placeholder="Address">
+										<label class="col-sm-4 text-right" for="address1">Address<span>*</span></label>
+										<input class="col-sm-4 form-control" name="address1" required type="text" id="address1" placeholder="Address">
 									</div>
 									<div class="form-group col-sm-4">
-										<label class="col-sm-5 text-right" for="Postcode">Postcode<span>*</span></label>
-										<select name="Postcode" id="Postcode" class="form-control col-sm-4" required>
+										<label class="col-sm-5 text-right" for="postcode">Postcode<span>*</span></label>
+										<select name="postcode" id="postcode" class="form-control col-sm-4" required>
 	  <option selected value="" disabled>Choose here</option>
 	<option value="6112">6112</option>
 	<option value="6992">6992</option>
@@ -375,28 +375,28 @@
 
 								<div class=row>
 									<div class="form-group col-sm-6">
-										<label class=" text-right col-sm-4" for="PhoneNumber">Phone Number:<span>*</span></label>
-										<input class="col-sm-6 form-control" name="PhoneNumber" required type="text" id="PhoneNumber" placeholder="Number">
+										<label class=" text-right col-sm-4" for="mobile">Phone Number:<span>*</span></label>
+										<input class="col-sm-6 form-control" name="mobile" required type="text" id="mobile" placeholder="Number">
 									</div>
 
 								</div>
 
 								<div class=row>
 									<div class="form-group col-sm-6">
-										<label class="col-sm-4 text-right" for="Medicare">Medicare<span>*</span></label>
-										<input class="form-control col-sm-4" name="Medicare" required type="text" id="Medicare" placeholder="5674564">
+										<label class="col-sm-4 text-right" for="medicare_no">Medicare<span>*</span></label>
+										<input class="form-control col-sm-4" name="medicare_no" required type="text" id="medicare_no" placeholder="5674564">
 									</div>
 									<div class="form-group col-sm-4">
-										<label class="text-right col-sm-5" for="Expirydate">Expiry Date<span>*</span></label>
-										<input name="Expirydate" required type="date" class="col-sm-4 form-control" id="Expirydate" placeholder="12/3/2018">
+										<label class="text-right col-sm-5" for="medicare_expiry">Expiry Date<span>*</span></label>
+										<input name="medicare_expiry" required type="date" class="col-sm-4 form-control" id="medicare_expiry" placeholder="12/3/2018">
 									</div>
 								</div>
 
 								<div class=row>
 									<div class="form-group col-sm-6">
-										<label class="col-sm-4 text-right" for="Interpreter">Interpreter</label>
+										<label class="col-sm-4 text-right" for="interpreter">Interpreter</label>
 
-										<select name="Interpreter" id="Interpreter" class="col-sm-4 form-control">
+										<select name="interpreter" id="interpreter" class="col-sm-4 form-control">
 							  <option selected value="" disabled>Choose here</option>
 	<option value="No">No</option>
 	<option value="Yes">Yes</option>
